--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,1 +1,5 @@
 <%= @player_1_name %> attacked <%= @player_2_name %>
+
+<form action="/ok" method="get">
+    <input type="submit" value="OK">
+</form>
