--- a/views/play.erb
+++ b/views/play.erb
@@ -1,7 +1,8 @@
 <%= @player_1_name %> vs. <%= @player_2_name %>
 
-<%= @player_2_name %>: 60HP
-
 <form action="attack">
     <input type="submit" value="Attack">
 </form> 
+
+<%= @player_2_name %>: <%= $player_2.hit_points %>HP
+
